update to use .env, add .gitignore

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,19 @@
 # Gitea/Drone Configuration
-GITEA_USER= # Your desired Gitea username
+# --------------------------
+# Create a user in Gitea with this username. This user will be made an admin in Drone.
+GITEA_USER=your_gitea_username
+
+# Drone server host (e.g., localhost, drone.your-domain.com)
 DRONE_SERVER_HOST=localhost
 
-# Secrets - Replace with your generated values
-DRONE_RPC_SECRET= # Generate with 'openssl rand -hex 16'
-DRONE_GITEA_CLIENT_ID= # Get this from Gitea UI in Step 2
-DRONE_GITEA_CLIENT_SECRET= # Get this from Gitea UI in Step 2
+# Secrets
+# --------------------------
+# Generate a strong secret for Drone RPC communication (e.g., openssl rand -hex 16)
+DRONE_RPC_SECRET=your_strong_secret_here
 
-# Container Runtime Socket (Update for Podman)
+# These will be obtained from Gitea after setting it up (Step 2 in README)
+DRONE_GITEA_CLIENT_ID=
+DRONE_GITEA_CLIENT_SECRET=
+
+# Docker Host for Podman
 # DOCKER_HOST=unix:///run/user/1000/podman/podman.sock
