--- a/.drone.yml
+++ b/.drone.yml
@@ -1,25 +1,38 @@
 kind: pipeline
-type: docker # Run on our Docker runner
+type: docker # Specifies the runner type
 name: default
 
+trigger:
+  branch:
+    - main # Only run this pipeline for commits to the main branch
+
 steps:
-- name: build_and_push
-  image: plugins/docker # Use the official Docker plugin
-  settings:
-    # --- Credentials for Nexus ---
-    # These 'from_secret' values match the secrets you just created in Drone
-    username:
-      from_secret: NEXUS_USER
-    password:
-      from_secret: NEXUS_PASS
-    
-    # --- Build & Push Details ---
-    repo: nexus:8082/docker-private/my-app # Use the service name for inter-container communication
-    tags:
-      - ${DRONE_COMMIT_SHA:0:7} # Tag with the short commit hash
-      - latest
-    dockerfile: Dockerfile # Assumes a 'Dockerfile' is in your repo
-    context: .
-    insecure: true # Add this because we're using HTTP, not
-    build_args:
-      - BUILDKIT_INLINE_CACHE=1 # Enable build cache
+  - name: test
+    image: golang:1.19 # Or node, python, etc.
+    commands:
+      - echo "Running unit tests..."
+      # - go test -v ./...
+
+  - name: build_and_push
+    image: plugins/docker # Use the official Docker plugin for Drone
+    depends_on: [ test ] # Only run if the 'test' step succeeds
+    settings:
+      # Credentials for Nexus (from Drone secrets)
+      username:
+        from_secret: NEXUS_USER
+      password:
+        from_secret: NEXUS_PASS
+      
+      # Build & Push Details
+      # Use the service name 'nexus' for inter-container communication
+      repo: nexus:8082/docker-private/my-app
+      tags:
+        - ${DRONE_COMMIT_SHA:0:7} # Tag with the short commit hash
+        - latest
+      dockerfile: Dockerfile # Assumes a 'Dockerfile' is in your repo
+      context: .
+      insecure: true # Required for connecting to Nexus via HTTP
+      
+      # <-- IMPROVEMENT: Use the 'latest' tag as a cache source for faster builds
+      cache_from:
+        - nexus:8082/docker-private/my-app:latest
