--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,15 @@
 version: '3.8'
 
 networks:
-  devops-net:
+  # IMPROVEMENT: Renamed for clarity and added external network for the reverse proxy.
+  gitea-done-next:
     driver: bridge
+  proxy:
+    external: true
 
 volumes:
+  # IMPROVEMENT: Added volume for Traefik to store SSL certificates.
+  traefik-data:
   gitea-data:
   nexus-data:
   drone-data:
@@ -12,75 +17,133 @@ volumes:
 services:
   # 1. Gitea (Git Server)
   gitea:
-    image: gitea/gitea:1.21.11 # Pinned version for stability
+    image: gitea/gitea:1.22.1 # Pinned version for stability
     container_name: gitea
     volumes:
       - gitea-data:/data
       - /etc/timezone:/etc/timezone:ro
       - /etc/localtime:/etc/localtime:ro
     ports:
-      - "3000:3000"  # Web UI
+      # - "3000:3000" # Web UI - No longer needed, Traefik handles this.
       - "2222:22"    # SSH
     networks:
-      - devops-net
+      - gitea-done-next
+      - proxy
     restart: unless-stopped
+    labels:
+      # --- Traefik Labels for Gitea ---
+      - "traefik.enable=true"
+      - "traefik.http.routers.gitea.rule=Host(`${GITEA_HOST}`)"
+      - "traefik.http.routers.gitea.entrypoints=websecure"
+      - "traefik.http.routers.gitea.tls.certresolver=letsencrypt"
+      - "traefik.http.services.gitea.loadbalancer.server.port=3000"
 
   # 2. Nexus (Artifact Repository)
   nexus:
-    image: sonatype/nexus3:3.68.1 # Pinned version for stability
+    image: sonatype/nexus3:3.69.0 # Pinned version for stability
     container_name: nexus
     user: "nexus" # <-- IMPROVEMENT: Run as non-root nexus user
     volumes:
       - nexus-data:/nexus-data
     ports:
-      - "8081:8081"  # Web UI
-      - "8082:8082"  # Docker Registry Port
+      # - "8081:8081" # Web UI - No longer needed, Traefik handles this.
+      # - "8082:8082" # Docker Registry Port - No longer needed, Traefik handles this.
     environment:
       # <-- IMPROVEMENT: Allocate 1GB RAM to Nexus. Adjust as needed.
       - EXTRA_JAVA_OPTS=-Xms1g -Xmx1g
     networks:
-      - devops-net
+      - gitea-done-next
+      - proxy
     restart: unless-stopped
+    labels:
+      # --- Traefik Labels for Nexus UI ---
+      - "traefik.enable=true"
+      - "traefik.http.routers.nexus.rule=Host(`${NEXUS_HOST}`)"
+      - "traefik.http.routers.nexus.entrypoints=websecure"
+      - "traefik.http.routers.nexus.tls.certresolver=letsencrypt"
+      - "traefik.http.services.nexus.loadbalancer.server.port=8081"
+      # --- Traefik Labels for Nexus Docker Registry ---
+      - "traefik.http.routers.nexus-registry.rule=Host(`${NEXUS_HOST}`) && PathPrefix(`/v2/`)"
+      - "traefik.http.routers.nexus-registry.entrypoints=websecure"
+      - "traefik.http.routers.nexus-registry.tls.certresolver=letsencrypt"
+      - "traefik.http.services.nexus-registry.loadbalancer.server.port=8082"
 
   # 3. Drone (CI Server)
   drone-server:
-    image: drone/drone:2.22.0 # Pinned version for stability
+    image: drone/drone:2.24.0 # Pinned version for stability
     container_name: drone-server
     ports:
-      - "80:80"
+      # - "80:80" # No longer needed, Traefik handles this.
     volumes:
       - drone-data:/data # Use a named volume for portability
     networks:
-      - devops-net
+      - gitea-done-next
+      - proxy
     environment:
       # --- Gitea Connection ---
-      - DRONE_GITEA_SERVER=http://gitea:3000
+      # IMPROVEMENT: Use the public-facing HTTPS URL for Gitea.
+      - DRONE_GITEA_SERVER=https://${GITEA_HOST}
       - DRONE_GITEA_CLIENT_ID=${DRONE_GITEA_CLIENT_ID}
       - DRONE_GITEA_CLIENT_SECRET=${DRONE_GITEA_CLIENT_SECRET}
       
       # --- Drone Config ---
       - DRONE_RPC_SECRET=${DRONE_RPC_SECRET}
-      - DRONE_SERVER_HOST=${DRONE_SERVER_HOST}
-      - DRONE_SERVER_PROTO=http
+      - DRONE_SERVER_HOST=${DRONE_HOST}
+      - DRONE_SERVER_PROTO=https
       - DRONE_USER_CREATE=username:${GITEA_ADMIN_USER},admin:true # Auto-make your user admin
     restart: unless-stopped
     depends_on:
       - gitea
+    labels:
+      # --- Traefik Labels for Drone ---
+      - "traefik.enable=true"
+      - "traefik.http.routers.drone.rule=Host(`${DRONE_HOST}`)"
+      - "traefik.http.routers.drone.entrypoints=websecure"
+      - "traefik.http.routers.drone.tls.certresolver=letsencrypt"
+      - "traefik.http.services.drone.loadbalancer.server.port=80"
 
   # 4. Drone Runner (The "Worker")
   drone-runner:
-    image: drone/drone-runner-docker:1.8.3 # Pinned version for stability
+    image: drone/drone-runner-docker:1.8.4 # Pinned version for stability
     container_name: drone-runner
     volumes:
       - ${DOCKER_HOST:-/var/run/docker.sock}:/var/run/docker.sock # Mount container runtime socket
     networks:
-      - devops-net
+      - gitea-done-next
     environment:
-      - DRONE_RPC_PROTO=http
+      - DRONE_RPC_PROTO=https
       - DRONE_RPC_HOST=drone-server # Connects to the server above
       - DRONE_RPC_SECRET=${DRONE_RPC_SECRET} # <-- MUST MATCH
       - DRONE_RUNNER_CAPACITY=2
       - DRONE_RUNNER_NAME=docker-runner
+      # IMPROVEMENT: Allow runner to communicate with services over the internal network.
+      - DRONE_RUNNER_NETWORKS=gitea-done-next_gitea-done-next
     restart: unless-stopped
     depends_on:
       - drone-server
+
+  # 5. Traefik (Reverse Proxy)
+  traefik:
+    image: traefik:v2.11
+    container_name: traefik
+    ports:
+      - "80:80"    # HTTP entrypoint
+      - "443:443"  # HTTPS entrypoint
+      - "8080:8080" # Traefik Dashboard (optional, for debugging)
+    volumes:
+      - traefik-data:/etc/traefik/acme
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+    networks:
+      - proxy
+    command:
+      - "--api.insecure=true" # Enables the dashboard on port 8080
+      - "--providers.docker=true"
+      - "--providers.docker.exposedbydefault=false"
+      - "--entrypoints.web.address=:80"
+      - "--entrypoints.web.http.redirections.entrypoint.to=websecure"
+      - "--entrypoints.web.http.redirections.entrypoint.scheme=https"
+      - "--entrypoints.websecure.address=:443"
+      - "--certificatesresolvers.letsencrypt.acme.tlschallenge=true"
+      - "--certificatesresolvers.letsencrypt.acme.email=${LETSENCRYPT_EMAIL}" # Add this to your .env
+      - "--certificatesresolvers.letsencrypt.acme.storage=/etc/traefik/acme/acme.json"
+    restart: unless-stopped
