--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,43 @@
-# Gitea/Drone Configuration
-# --------------------------
-# Create a user in Gitea with this username. This user will be made an admin in Drone.
-GITEA_USER=your_gitea_username
+# -----------------------------------------------------------------------------
+# Gitea-Done-Next Environment Configuration
+#
+# Create a copy of this file named `.env` and fill in your values.
+# This file is ignored by Git to protect your secrets.
+# -----------------------------------------------------------------------------
 
-# Drone server host (e.g., localhost, drone.your-domain.com)
-DRONE_SERVER_HOST=localhost
+# --- Domain Configuration ---
+# Replace with your actual domain names. For local testing, you can use *.localhost
+# and add them to your /etc/hosts file (e.g., 127.0.0.1 gitea.localhost drone.localhost ...)
+GITEA_HOST=gitea.your.domain
+DRONE_HOST=drone.your.domain
+NEXUS_HOST=nexus.your.domain
+NEXUS_REGISTRY_HOST=nexus-registry.your.domain
+TRAEFIK_HOST=traefik.your.domain
 
-# Secrets
-# --------------------------
-# Generate a strong secret for Drone RPC communication (e.g., openssl rand -hex 16)
-DRONE_RPC_SECRET=your_strong_secret_here
+# --- Secrets and Credentials ---
+GITEA_ADMIN_USER= # The admin username you will create in Gitea
+DRONE_RPC_SECRET= # Generate with: openssl rand -hex 16
+LETSENCRYPT_EMAIL= # Your email for SSL certificate notifications
 
-# These will be obtained from Gitea after setting it up (Step 2 in README)
+# These will be filled in after you set up the Gitea OAuth2 application
 DRONE_GITEA_CLIENT_ID=
 DRONE_GITEA_CLIENT_SECRET=
 
-# Docker Host for Podman
-# DOCKER_HOST=unix:///run/user/1000/podman/podman.sock
+# --- Traefik Dashboard Credentials ---
+# Generate with: echo $(htpasswd -nb your_user your_password)
+TRAEFIK_AUTH=
+
+# --- Gitea PostgreSQL Database ---
+POSTGRES_DB=gitea
+POSTGRES_USER=gitea
+POSTGRES_PASSWORD= # Use a strong, unique password
+
+# --- Optional Image Versions (Uncomment to override defaults) ---
+# GITEA_VERSION=1.22.1
+# NEXUS_VERSION=3.69.0
+# DRONE_VERSION=2.24.0
+# DRONE_RUNNER_VERSION=1.8.4
+# TRAEFIK_VERSION=v2.11
+# --- Podman/Docker Socket Path (Optional) ---
+# For Podman, uncomment and set this to your socket path, e.g., unix:///run/user/1000/podman/podman.sock
+# DOCKER_HOST=
