--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ volumes:
   traefik-data:
   gitea-data:
   nexus-data:
+  postgres-data:
   drone-data:
 
 services:
@@ -26,6 +27,14 @@ services:
     ports:
       # - "3000:3000" # Web UI - No longer needed, Traefik handles this.
       - "2222:22"    # SSH
+    environment:
+      - USER_UID=1000
+      - USER_GID=1000
+      - GITEA__database__DB_TYPE=postgres
+      - GITEA__database__HOST=postgres:5432
+      - GITEA__database__NAME=${POSTGRES_DB}
+      - GITEA__database__USER=${POSTGRES_USER}
+      - GITEA__database__PASSWD=${POSTGRES_PASSWORD}
     networks:
       - gitea-done-next
       - proxy
@@ -37,6 +46,24 @@ services:
       - "traefik.http.routers.gitea.entrypoints=websecure"
       - "traefik.http.routers.gitea.tls.certresolver=letsencrypt"
       - "traefik.http.services.gitea.loadbalancer.server.port=3000"
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3000/api/v1/version"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+    deploy:
+      resources:
+        limits:
+          cpus: '0.5'
+          memory: 512M
+
+    depends_on:
+      - postgres
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   # 2. Nexus (Artifact Repository)
   nexus:
@@ -63,10 +90,26 @@ services:
       - "traefik.http.routers.nexus.tls.certresolver=letsencrypt"
       - "traefik.http.services.nexus.loadbalancer.server.port=8081"
       # --- Traefik Labels for Nexus Docker Registry ---
-      - "traefik.http.routers.nexus-registry.rule=Host(`${NEXUS_HOST}`) && PathPrefix(`/v2/`)"
+      - "traefik.http.routers.nexus-registry.rule=Host(`${NEXUS_REGISTRY_HOST}`)"
       - "traefik.http.routers.nexus-registry.entrypoints=websecure"
       - "traefik.http.routers.nexus-registry.tls.certresolver=letsencrypt"
       - "traefik.http.services.nexus-registry.loadbalancer.server.port=8082"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8081/service/rest/v1/status"]
+      interval: 30s
+      timeout: 10s
+      retries: 10 # Nexus can take a while to start
+    deploy:
+      resources:
+        limits:
+          cpus: '1.0'
+          memory: 2G
+
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   # 3. Drone (CI Server)
   drone-server:
@@ -93,7 +136,10 @@ services:
       - DRONE_USER_CREATE=username:${GITEA_ADMIN_USER},admin:true # Auto-make your user admin
     restart: unless-stopped
     depends_on:
-      - gitea
+      gitea:
+        condition: service_healthy
+      nexus: # Optional, but good practice if pipelines might run immediately
+        condition: service_healthy
     labels:
       # --- Traefik Labels for Drone ---
       - "traefik.enable=true"
@@ -101,6 +147,18 @@ services:
       - "traefik.http.routers.drone.entrypoints=websecure"
       - "traefik.http.routers.drone.tls.certresolver=letsencrypt"
       - "traefik.http.services.drone.loadbalancer.server.port=80"
+      # --- Apply Security Headers ---
+      - "traefik.http.routers.drone.middlewares=security-headers@docker"
+    deploy:
+      resources:
+        limits:
+          cpus: '0.5'
+          memory: 512M
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   # 4. Drone Runner (The "Worker")
   drone-runner:
@@ -120,7 +178,19 @@ services:
       - DRONE_RUNNER_NETWORKS=${COMPOSE_PROJECT_NAME:-gitea-done-next}_gitea-done-next
     restart: unless-stopped
     depends_on:
-      - drone-server
+      drone-server:
+        condition: service_started # The runner can start once the server service has started
+    deploy:
+      resources:
+        limits:
+          cpus: '0.5'
+          memory: 512M
+
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   # 5. Traefik (Reverse Proxy)
   traefik:
@@ -129,14 +199,12 @@ services:
     ports:
       - "80:80"    # HTTP entrypoint
       - "443:443"  # HTTPS entrypoint
-      - "8080:8080" # Traefik Dashboard (optional, for debugging)
     volumes:
       - traefik-data:/etc/traefik/acme
       - /var/run/docker.sock:/var/run/docker.sock:ro
     networks:
       - proxy
     command:
-      - "--api.insecure=true" # Enables the dashboard on port 8080
       - "--providers.docker=true"
       - "--providers.docker.exposedbydefault=false"
       - "--entrypoints.web.address=:80"
@@ -147,3 +215,54 @@ services:
       - "--certificatesresolvers.letsencrypt.acme.email=${LETSENCRYPT_EMAIL}" # Add this to your .env
       - "--certificatesresolvers.letsencrypt.acme.storage=/etc/traefik/acme/acme.json"
     restart: unless-stopped
+    labels:
+      # --- Traefik Labels for Dashboard (secure) ---
+      - "traefik.enable=true"
+      - "traefik.http.routers.traefik-dashboard.rule=Host(`${TRAEFIK_HOST}`)"
+      - "traefik.http.routers.traefik-dashboard.entrypoints=websecure"
+      - "traefik.http.routers.traefik-dashboard.tls.certresolver=letsencrypt"
+      - "traefik.http.routers.traefik-dashboard.service=api@internal"
+      - "traefik.http.routers.traefik-dashboard.middlewares=auth"
+      - "traefik.http.middlewares.auth.basicauth.users=${TRAEFIK_AUTH}" # user:hashed-password
+      # --- Global Security Headers Middleware ---
+      - "traefik.http.middlewares.security-headers.headers.framedeny=true"
+      - "traefik.http.middlewares.security-headers.headers.contenttypeoptions=nosniff"
+      - "traefik.http.middlewares.security-headers.headers.stsseconds=31536000"
+      - "traefik.http.middlewares.security-headers.headers.stspreload=true"
+      - "traefik.http.middlewares.security-headers.headers.stssubdomains=true"
+      # --- Apply Security Headers to other routers ---
+      - "traefik.http.routers.gitea.middlewares=security-headers@docker"
+      - "traefik.http.routers.nexus.middlewares=security-headers@docker"
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
+
+  # 6. PostgreSQL Database (for Gitea)
+  postgres:
+    image: postgres:16
+    container_name: postgres
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+    networks:
+      - gitea-done-next
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    deploy:
+      resources:
+        limits:
+          cpus: '0.25'
+          memory: 256M
+      restart_policy:
+        condition: on-failure
+        delay: 5s
+        max_attempts: 3
